[package]
name = "grpc_hub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "grpc_hub"
path = "src/lib.rs"

[dependencies]
modkit = { path = "../../libs/modkit" }
modkit-transport-grpc = { path = "../../libs/modkit-transport-grpc" }
inventory = "0.3"
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = "0.5"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
http = "1.3"

# gRPC server
tonic = "0.14.2"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"

