[package]
name = "grpc_hub"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "grpc_hub"
path = "src/lib.rs"

[dependencies]
modkit = { path = "../../libs/modkit" }
modkit-transport-grpc = { path = "../../libs/modkit-transport-grpc" }
module_orchestrator-contracts = { path = "../module_orchestrator/module_orchestrator-contracts" }
inventory = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
http = { workspace = true }

# gRPC server
tonic = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }

